# CSC-394-Project

./: .coverage  .gitignore  MANIFEST.in  README.md  csc-394-group1.pem  group-info.txt  nohup.out  setup.cfg  totalGenreCount.csv
flaskr/: __init__.py  auth.py  card_display_controls.py  card_displays.py  db.py  home_page.py  index.py  index_htmx.py  movieDBapi.py  movie_page.py  pythontest.py  schema.sql  test.py  totalGenreCount.csv  user_page.py  view_database.py  watch_list.py
flaskr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flaskr/database/: database_functions.py  sample_data.sql  schema.sql  testing_schema.sql  testing_triggers.sql  triggers.sql
flaskr/static/: style-light.css  style.css  user_page_light.css
flaskr/templates/: admin_index.html  base.html  index.html  test.html  test2.html
flaskr/templates/api_testing/: api_script.js  api_testing.html  preview_database.html  results_table_htmx.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/card_displays/: cast_card.html  edit_watch_list_movie_card.html  modal_base.html  movie_card.html  watch_list_card.html  watch_list_movie_card.html
flaskr/templates/home_page/: add_friends_modal.html  filter_tags_htmx.html  home_page.html  modal_form_add_friends.html  movie_page.html  new_trending_list_htmx.html  user_search_results.html
flaskr/templates/index_htmx/: confirm_new_password_htmx.html  index_htmx.html  (+1 more)
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_home_page.py  test_movie_page.py  test_user_page.py  test_watch_list_page.py
(+8 files in other folders)
