[metadata]
name = flaskr
version = 1.0.0
url = http://52.55.83.191/index
description = CSC 394 group 1 project

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr